--- a/src/core/features/course/pages/contents/contents.html
+++ b/src/core/features/course/pages/contents/contents.html
@@ -1,3 +1,6 @@
+<h1>Oyee</h1>
+
+
 <core-navbar-buttons slot="end">
     <core-context-menu>
         <core-context-menu-item [hidden]="!displayEnableDownload" [priority]="2000" [iconAction]="downloadEnabledIcon"
